# blog

./: 404.html  Makefile  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-docs.yml
assets/javascript/: custom.js
docs/en/: mkdocs.yml
docs/en/docs/: index.md
docs/en/docs/posts/: index.md
docs/en/docs/python/: consume-api.md  disassembler.md  increasing-performance-sets.md  rounding-secret.md
docs/pt-BR/: mkdocs.yml
docs/pt-BR/docs/: index.md
docs/pt-BR/docs/posts/: index.md
docs/pt-BR/docs/python/: consume-api.md  disassembler.md  increasing-performance-sets.md  rounding-secret.md
docs/pt-BR/overrides/: main.html
docs_src/: consume_api.py  dis_example.py
en/: 404.html  index.html  sitemap.xml
en/assets/javascript/: termynal.js
en/python/consume-api/: index.html
en/python/disassembler/: index.html
en/python/rounding-secret/: index.html
en/search/: search_index.json
overrides/: main.html
overrides/assets/stylesheets/: main.css
pt-BR/: 404.html  index.html  sitemap.xml
pt-BR/posts/: index.html
pt-BR/python/consume-api/: index.html
pt-BR/python/disassembler/: index.html
pt-BR/python/increasing-performance-sets/: index.html
pt-BR/python/rounding-secret/: index.html
pt-BR/search/: search_index.json
python/api/: index.html
python/consume-api/: index.html
python/increasing-performance-sets/: index.html
python/rounding-secret/: index.html
search/: search_index.json
